sort posts in news feed by last activity
